--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,11 @@
   "dependencies": {
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
-
     "pinia": "^3.0.4",
     "vue": "^3.5.24",
     "vue-chartjs": "^5.3.3",
-    "vue-router": "^4.6.4"
+    "vue-router": "^4.6.4",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
