--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,13 @@ services:
     container_name: movie-backend
     ports:
       - "8080:8080"
+    env_file:
+      - ./backend/.env
     environment:
       - DB_URI=mongodb://mongo:27017
       - DB_NAME=movie_ticket_db
       - REDIS_ADDR=redis:6379
-      - KAFKA_BROKERS=kafka:9092
+      - KAFKA_BROKERS=kafka:29092
       - PORT=8080
     depends_on:
       - mongo
